# digon

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md
stage0/: CMakeLists.txt
stage0/src/back/: link.cc  link.h  llvm_emit.cc  llvm_emit.h
stage0/src/base/: arena.cc  arena.h  diag.cc  diag.h  intern.cc  intern.h  map.cc  map.h  vec.cc  vec.h
stage0/src/driver/: build.cc  build.h  cli.cc  cli.h  main.cc
stage0/src/front/: ast.cc  ast.h  fmt.cc  fmt.h  lex.cc  lex.h  parse.cc  parse.h  types.cc  types.h
stage0/src/ir/: lower.cc  lower.h
stage0/tests/: arena_test.cc  diag_test.cc  fmt_test.cc  intern_test.cc  lex_test.cc  map_test.cc  parse_test.cc  run.sh  vec_test.cc
stage0/tests/compile_fail/borrows/: borrow_assign.dg  borrow_assign.txt  borrow_call_alias.dg  borrow_immut.dg  borrow_immut.txt  borrow_mut_vs_shared.dg  borrow_mut_vs_shared.txt  borrow_return.dg  borrow_return.txt
stage0/tests/compile_fail/casts/: non_numeric.dg  non_numeric.txt
stage0/tests/compile_fail/defer/: defer_nested.dg  defer_nested.txt  must_defer_unpaired.dg  must_defer_unpaired.txt
stage0/tests/compile_fail/enums/: nonexhaustive.dg  nonexhaustive_int.dg  nonexhaustive_int.txt
stage0/tests/compile_fail/misc/: bad_syntax.dg  break_outside.dg  break_outside.txt  interp.dg  interp.txt
stage0/tests/compile_fail/moves/: move_after_borrow.dg  move_after_borrow.txt  move_into_call.dg  use_after_move.dg
stage0/tests/compile_fail/structs/: field_assign_immutable.dg  field_assign_immutable.txt
stage0/tests/compile_fail/types/: alias_cyclic.dg  alias_cyclic.txt  deref_non_pointer.dg  deref_non_pointer.txt  newtype_nominal.dg  newtype_nominal.txt  type_arg.dg  type_arg.txt  type_arity.dg  type_arity.txt  type_branches.dg  type_branches.txt  type_if_cond.dg  type_immutable.dg  type_return.dg  type_return.txt  undef_fn.dg  unknown_type.dg
stage0/tests/compile_fail/ufcs/: no_method.dg  no_method.txt
stage0/tests/golden/basic/: arith.dg  bitwise.dg  calls.dg  factorial.dg  fib.dg  hello.dg  hello.out  locals.dg  precedence.dg  shortcircuit.dg
stage0/tests/golden/borrows/: borrow.dg  borrow_shared.dg  copy_no_move.dg  deref.dg  nll.dg  nll_release.dg
stage0/tests/golden/casts/: numeric.dg  signedness.dg
stage0/tests/golden/control/: for_inclusive.dg  for_range.dg  loop_break.dg  while_continue.dg
stage0/tests/golden/defer/: defer_early.dg  defer_early.out  defer_lifo.dg  defer_lifo.out  must_defer.dg
stage0/tests/golden/enums/: enum.dg  match_patterns.dg  mixed_enum.dg  payload_enum.dg
stage0/tests/golden/moves/: move_expr.dg
stage0/tests/golden/structs/: field_assign.dg  point.dg
stage0/tests/golden/types/: alias_forward.dg  alias_newtype.dg  int_infer.dg
stage0/tests/golden/ufcs/: equivalence.dg  methods.dg
